tests/fixtures/invalid/len_none.py
# Cannot call len() with None
x = len(None)
